// Vitest Snapshot v1

exports[`Comment > Comment baseVue demo works fine 1`] = `
<div
  class="t-comment"
>
  <div
    class="t-comment__inner"
  >
    <div
      class="t-comment__avatar"
    >
      <img
        alt=""
        class="t-comment__avatar-image"
        src="https://tdesign.gtimg.com/site/avatar.jpg"
      />
    </div>
    <div
      class="t-comment__content"
    >
      <div
        class="t-comment__author"
      >
        <span
          class="t-comment__name"
        >
          评论作者名
        </span>
        <span
          class="t-comment__time"
        >
          今天16:38
        </span>
      </div>
      <div
        class="t-comment__detail"
      >
        这里是评论者写的评论内容。
      </div>
      <!---->
      <!---->
    </div>
  </div>
  <!---->
</div>
`;

exports[`Comment > Comment listVue demo works fine 1`] = `
<div
  class="t-list t-size-m t-list--split"
  data-v-00f337f5=""
>
  
  
  <!---->
  <ul
    class="t-list__inner"
  >
    
    
    <li
      class="t-list-item"
      data-v-00f337f5=""
    >
      <div
        class="t-list-item-main"
      >
        
        <div
          class="t-comment"
          data-v-00f337f5=""
        >
          <div
            class="t-comment__inner"
          >
            <div
              class="t-comment__avatar"
            >
              <img
                alt=""
                class="t-comment__avatar-image"
                src="https://tdesign.gtimg.com/site/avatar.jpg"
              />
            </div>
            <div
              class="t-comment__content"
            >
              <div
                class="t-comment__author"
              >
                <span
                  class="t-comment__name"
                >
                  评论作者名A
                </span>
                <span
                  class="t-comment__time"
                >
                  今天16:38
                </span>
              </div>
              <div
                class="t-comment__detail"
              >
                评论作者名A写的评论内容。
              </div>
              <!---->
              <ul
                class="t-comment__actions"
              >
                
                <li>
                  <span
                    data-v-00f337f5=""
                  >
                    <svg
                      class="t-icon t-icon-thumb-up"
                      data-v-00f337f5=""
                    >
                      <use
                        href="#t-icon-thumb-up"
                      />
                    </svg>
                    <span
                      class="action-text"
                      data-v-00f337f5=""
                    >
                      6
                    </span>
                  </span>
                </li>
                <li>
                  <span
                    data-v-00f337f5=""
                  >
                    <svg
                      class="t-icon t-icon-chat"
                      data-v-00f337f5=""
                    >
                      <use
                        href="#t-icon-chat"
                      />
                    </svg>
                    <span
                      class="action-text"
                      data-v-00f337f5=""
                    >
                      回复
                    </span>
                  </span>
                </li>
                
              </ul>
            </div>
          </div>
          <!---->
        </div>
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
      data-v-00f337f5=""
    >
      <div
        class="t-list-item-main"
      >
        
        <div
          class="t-comment"
          data-v-00f337f5=""
        >
          <div
            class="t-comment__inner"
          >
            <div
              class="t-comment__avatar"
            >
              <img
                alt=""
                class="t-comment__avatar-image"
                src="https://tdesign.gtimg.com/site/avatar.jpg"
              />
            </div>
            <div
              class="t-comment__content"
            >
              <div
                class="t-comment__author"
              >
                <span
                  class="t-comment__name"
                >
                  评论作者名B
                </span>
                <span
                  class="t-comment__time"
                >
                  今天16:38
                </span>
              </div>
              <div
                class="t-comment__detail"
              >
                评论作者名B写的评论内容。
              </div>
              <!---->
              <ul
                class="t-comment__actions"
              >
                
                <li>
                  <span
                    data-v-00f337f5=""
                  >
                    <svg
                      class="t-icon t-icon-thumb-up"
                      data-v-00f337f5=""
                    >
                      <use
                        href="#t-icon-thumb-up"
                      />
                    </svg>
                    <span
                      class="action-text"
                      data-v-00f337f5=""
                    >
                      6
                    </span>
                  </span>
                </li>
                <li>
                  <span
                    data-v-00f337f5=""
                  >
                    <svg
                      class="t-icon t-icon-chat"
                      data-v-00f337f5=""
                    >
                      <use
                        href="#t-icon-chat"
                      />
                    </svg>
                    <span
                      class="action-text"
                      data-v-00f337f5=""
                    >
                      回复
                    </span>
                  </span>
                </li>
                
              </ul>
            </div>
          </div>
          <!---->
        </div>
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
      data-v-00f337f5=""
    >
      <div
        class="t-list-item-main"
      >
        
        <div
          class="t-comment"
          data-v-00f337f5=""
        >
          <div
            class="t-comment__inner"
          >
            <div
              class="t-comment__avatar"
            >
              <img
                alt=""
                class="t-comment__avatar-image"
                src="https://tdesign.gtimg.com/site/avatar.jpg"
              />
            </div>
            <div
              class="t-comment__content"
            >
              <div
                class="t-comment__author"
              >
                <span
                  class="t-comment__name"
                >
                  评论作者名C
                </span>
                <span
                  class="t-comment__time"
                >
                  今天16:38
                </span>
              </div>
              <div
                class="t-comment__detail"
              >
                评论作者名C写的评论内容。
              </div>
              <!---->
              <ul
                class="t-comment__actions"
              >
                
                <li>
                  <span
                    data-v-00f337f5=""
                  >
                    <svg
                      class="t-icon t-icon-thumb-up"
                      data-v-00f337f5=""
                    >
                      <use
                        href="#t-icon-thumb-up"
                      />
                    </svg>
                    <span
                      class="action-text"
                      data-v-00f337f5=""
                    >
                      6
                    </span>
                  </span>
                </li>
                <li>
                  <span
                    data-v-00f337f5=""
                  >
                    <svg
                      class="t-icon t-icon-chat"
                      data-v-00f337f5=""
                    >
                      <use
                        href="#t-icon-chat"
                      />
                    </svg>
                    <span
                      class="action-text"
                      data-v-00f337f5=""
                    >
                      回复
                    </span>
                  </span>
                </li>
                
              </ul>
            </div>
          </div>
          <!---->
        </div>
        
        <!---->
      </div>
    </li>
    
    
  </ul>
  <!---->
  
  <div
    class="t-list__load"
  >
    <!---->
  </div>
  
</div>
`;

exports[`Comment > Comment operationVue demo works fine 1`] = `
<div
  class="t-comment"
  data-v-6624a820=""
>
  <div
    class="t-comment__inner"
  >
    <div
      class="t-comment__avatar"
    >
      <img
        alt=""
        class="t-comment__avatar-image"
        src="https://tdesign.gtimg.com/site/avatar.jpg"
      />
    </div>
    <div
      class="t-comment__content"
    >
      <div
        class="t-comment__author"
      >
        <span
          class="t-comment__name"
        >
          评论作者名
        </span>
        <span
          class="t-comment__time"
        >
          今天16:38
        </span>
      </div>
      <div
        class="t-comment__detail"
      >
        这里是评论者写的评论内容。
      </div>
      <!---->
      <ul
        class="t-comment__actions"
      >
        
        <li>
          <span
            data-v-6624a820=""
          >
            <svg
              class="t-icon t-icon-thumb-up"
              data-v-6624a820=""
            >
              <use
                href="#t-icon-thumb-up"
              />
            </svg>
            <span
              class="action-text"
              data-v-6624a820=""
            >
              6
            </span>
          </span>
        </li>
        <li>
          <span
            data-v-6624a820=""
          >
            <svg
              class="t-icon t-icon-chat"
              data-v-6624a820=""
            >
              <use
                href="#t-icon-chat"
              />
            </svg>
            <span
              class="action-text"
              data-v-6624a820=""
            >
              回复
            </span>
          </span>
        </li>
        
      </ul>
    </div>
  </div>
  <!---->
</div>
`;

exports[`Comment > Comment quoteVue demo works fine 1`] = `
<div
  class="t-comment"
  data-v-10a57735=""
>
  <div
    class="t-comment__inner"
  >
    <div
      class="t-comment__avatar"
    >
      <img
        alt=""
        class="t-comment__avatar-image"
        src="https://tdesign.gtimg.com/site/avatar.jpg"
      />
    </div>
    <div
      class="t-comment__content"
    >
      <div
        class="t-comment__author"
      >
        <span
          class="t-comment__name"
        >
          评论作者名
        </span>
        <span
          class="t-comment__time"
        >
          今天16:38
        </span>
      </div>
      <div
        class="t-comment__detail"
      >
        这里是评论者写的评论内容。
      </div>
      <div
        class="t-comment__quote"
      >
        
        <div
          class="t-comment"
          data-v-10a57735=""
        >
          <div
            class="t-comment__inner"
          >
            <!---->
            <div
              class="t-comment__content"
            >
              <div
                class="t-comment__author"
              >
                <span
                  class="t-comment__name"
                >
                  引用内容标题
                </span>
                <!---->
              </div>
              <div
                class="t-comment__detail"
              >
                引用评论内容。
              </div>
              <!---->
              <!---->
            </div>
          </div>
          <!---->
        </div>
        
      </div>
      <ul
        class="t-comment__actions"
      >
        
        <li>
          <span
            data-v-10a57735=""
          >
            <svg
              class="t-icon t-icon-thumb-up"
              data-v-10a57735=""
            >
              <use
                href="#t-icon-thumb-up"
              />
            </svg>
            <span
              class="action-text"
              data-v-10a57735=""
            >
              6
            </span>
          </span>
        </li>
        <li>
          <span
            data-v-10a57735=""
          >
            <svg
              class="t-icon t-icon-chat"
              data-v-10a57735=""
            >
              <use
                href="#t-icon-chat"
              />
            </svg>
            <span
              class="action-text"
              data-v-10a57735=""
            >
              回复
            </span>
          </span>
        </li>
        
      </ul>
    </div>
  </div>
  <!---->
</div>
`;

exports[`Comment > Comment replyFormVue demo works fine 1`] = `
<div
  class="t-comment"
  data-v-361d1d5e=""
>
  <div
    class="t-comment__inner"
  >
    <div
      class="t-comment__avatar"
    >
      <img
        alt=""
        class="t-comment__avatar-image"
        src="https://tdesign.gtimg.com/site/avatar.jpg"
      />
    </div>
    <div
      class="t-comment__content"
    >
      <!---->
      <div
        class="t-comment__detail"
      >
        
        <div
          class="form-container"
          data-v-361d1d5e=""
        >
          <div
            class="t-textarea"
            data-v-361d1d5e=""
          >
            <textarea
              class="t-textarea__inner narrow-scrollbar"
              placeholder="请输入内容"
            />
            <!---->
            <!---->
            <!---->
          </div>
          <button
            class="t-button t-size-m t-button--variant-base t-button--theme-primary form-submit"
            data-v-361d1d5e=""
            type="button"
          >
            <span
              class="t-button__text"
            >
              
              回复
              
            </span>
          </button>
        </div>
        
      </div>
      <!---->
      <!---->
    </div>
  </div>
  <!---->
</div>
`;

exports[`Comment > Comment replyVue demo works fine 1`] = `
<div
  class="t-comment"
  data-v-4f3064a3=""
>
  <div
    class="t-comment__inner"
  >
    <div
      class="t-comment__avatar"
    >
      <img
        alt=""
        class="t-comment__avatar-image"
        src="https://tdesign.gtimg.com/site/avatar.jpg"
      />
    </div>
    <div
      class="t-comment__content"
    >
      <div
        class="t-comment__author"
      >
        <span
          class="t-comment__name"
        >
          评论作者名
        </span>
        <span
          class="t-comment__time"
        >
          今天16:38
        </span>
      </div>
      <div
        class="t-comment__detail"
      >
        这里是评论者写的评论内容。
      </div>
      <!---->
      <ul
        class="t-comment__actions"
      >
        
        <li>
          <span
            data-v-4f3064a3=""
          >
            <svg
              class="t-icon t-icon-thumb-up"
              data-v-4f3064a3=""
            >
              <use
                href="#t-icon-thumb-up"
              />
            </svg>
            <span
              class="action-text"
              data-v-4f3064a3=""
            >
              6
            </span>
          </span>
        </li>
        <li>
          <span
            data-v-4f3064a3=""
          >
            <svg
              class="t-icon t-icon-chat"
              data-v-4f3064a3=""
            >
              <use
                href="#t-icon-chat"
              />
            </svg>
            <span
              class="action-text"
              data-v-4f3064a3=""
            >
              回复
            </span>
          </span>
        </li>
        
      </ul>
    </div>
  </div>
  <div
    class="t-comment__reply"
  >
    
    <div
      class="t-comment"
      data-v-4f3064a3=""
    >
      <div
        class="t-comment__inner"
      >
        <div
          class="t-comment__avatar"
        >
          <img
            alt=""
            class="t-comment__avatar-image"
            src="https://tdesign.gtimg.com/site/avatar.jpg"
          />
        </div>
        <div
          class="t-comment__content"
        >
          <div
            class="t-comment__author"
          >
            <span
              class="t-comment__name"
            >
              
              <span
                data-v-4f3064a3=""
              >
                评论作者名B
              </span>
              <svg
                class="t-icon t-icon-caret-right-small t-size-s author-icon"
                data-v-4f3064a3=""
              >
                <use
                  href="#t-icon-caret-right-small"
                />
              </svg>
              <span
                data-v-4f3064a3=""
              >
                评论作者名A
              </span>
              
            </span>
            <span
              class="t-comment__time"
            >
              今天16:38
            </span>
          </div>
          <div
            class="t-comment__detail"
          >
            这里是评论者写的评论内容。
          </div>
          <!---->
          <ul
            class="t-comment__actions"
          >
            
            <li>
              <span
                data-v-4f3064a3=""
              >
                <svg
                  class="t-icon t-icon-thumb-up"
                  data-v-4f3064a3=""
                >
                  <use
                    href="#t-icon-thumb-up"
                  />
                </svg>
                <span
                  class="action-text"
                  data-v-4f3064a3=""
                >
                  6
                </span>
              </span>
            </li>
            <li>
              <span
                data-v-4f3064a3=""
              >
                <svg
                  class="t-icon t-icon-chat"
                  data-v-4f3064a3=""
                >
                  <use
                    href="#t-icon-chat"
                  />
                </svg>
                <span
                  class="action-text"
                  data-v-4f3064a3=""
                >
                  回复
                </span>
              </span>
            </li>
            
          </ul>
        </div>
      </div>
      <!---->
    </div>
    
  </div>
</div>
`;
